fix commons dependency