@@ -234,8 +234,8 @@
                                 <groupId>org.springframework</groupId>
                             </dependency>
                             <dependency>
-                                <artifactId>apertoCommons</artifactId>
-                                <groupId>apertoCommons</groupId>
+                                <artifactId>aperto-commons-core</artifactId>
+                                <groupId>com.aperto.commons</groupId>
                             </dependency>
                             <dependency>
                                 <artifactId>commons-lang</artifactId>
@@ -259,9 +259,7 @@
                                        -Xms128M -Xmx800M -XX:MaxPermSize=128M
                                        -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</cargo.jvmargs>
                                    -->
-                            <cargo.jvmargs>-Xms128M -Xmx800M -XX:MaxPermSize=128M
-                                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
-                            </cargo.jvmargs>
+                            <cargo.jvmargs>-Xms128M -Xmx800M -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</cargo.jvmargs>
                         </properties>
                     </configuration>
                 </configuration>
